// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Color Collections component ColorCollections with prop isExpertColor as false should match snapshot 1`] = `
<div
  className="color-collections__wrapper"
>
  <ColorCollectionsTab
    collectionTabs={Array []}
    showTab={[Function]}
    tabIdShow=""
  />
  <div
    className="color-collections__collections-list"
  >
    <EnhanceComponent
      data={
        Array [
          "michaeljackson",
          Object {
            "categories": Object {
              "data": Array [
                null,
                Object {
                  "summaryIds": Array [
                    1,
                    2,
                    3,
                  ],
                },
                undefined,
              ],
              "idToIndexHash": Object {
                "michaeljackson": 1,
              },
            },
            "colorMap": Object {
              "color4": "color 4 config",
              "color5": "color 5 config",
              "color6": "color 6 config",
              "color7": undefined,
            },
            "colorNumberToIdHash": Object {
              "4": "color4",
              "5": "color5",
              "6": "color6",
            },
            "colorNumbers": Array [
              4,
              5,
              6,
              7,
            ],
            "isExpertColor": false,
            "summaries": Object {
              "data": Object {
                "birthdaycake": Object {
                  "colorNumbers": Array [
                    4,
                    5,
                    6,
                    7,
                  ],
                  "description": "undescribable",
                  "name": "jack casino",
                  "thumbUrl": "sher-in-your-williams.com",
                },
              },
              "idToIndexHash": Object {
                "michaeljackson": "birthdaycake",
              },
            },
          },
        ]
      }
      defaultItemsPerView={8}
      getSummaryData={[Function]}
      isExpertColor={false}
      isInfinity={false}
      key=""
    />
  </div>
</div>
`;

exports[`Color Collections component ColorCollections with prop isExpertColor as true should match snapshot 1`] = `
<div
  className="color-collections__wrapper"
>
  <div
    className="color-collections__collections-list"
  >
    <EnhanceComponent
      data={
        Array [
          "michaeljackson",
          Object {
            "categories": Object {
              "data": Array [
                null,
                Object {
                  "summaryIds": Array [
                    1,
                    2,
                    3,
                  ],
                },
                undefined,
              ],
              "idToIndexHash": Object {
                "michaeljackson": 1,
              },
            },
            "colorMap": Object {
              "color4": "color 4 config",
              "color5": "color 5 config",
              "color6": "color 6 config",
              "color7": undefined,
            },
            "colorNumberToIdHash": Object {
              "4": "color4",
              "5": "color5",
              "6": "color6",
            },
            "colorNumbers": Array [
              4,
              5,
              6,
              7,
            ],
            "isExpertColor": false,
            "summaries": Object {
              "data": Object {
                "birthdaycake": Object {
                  "colorNumbers": Array [
                    4,
                    5,
                    6,
                    7,
                  ],
                  "description": "undescribable",
                  "name": "jack casino",
                  "thumbUrl": "sher-in-your-williams.com",
                },
              },
              "idToIndexHash": Object {
                "michaeljackson": "birthdaycake",
              },
            },
          },
        ]
      }
      defaultItemsPerView={8}
      getSummaryData={[Function]}
      isExpertColor={true}
      isInfinity={false}
      key=""
    />
  </div>
</div>
`;

exports[`Color Collections component ColorCollections with prop isShowBack as true should match snapshot 1`] = `
<Connect(CollectionDetail)
  collectionDetailData={Object {}}
/>
`;
